19990716-14:30 CET Eddie Runia <eddie@runia.com>
  * source/runner/runner.c
    Typo corrected

19990716-13:00 CET Eddie Runia <eddie@runia.com>
  * include/initsymb.h; source/vm/initsymb.c; source/runner/runner.c;
    include/run_exp.h
    The runner is back on-line :-))

19990716-10:54 Alexander Kresin
  * source\hbpp\hbpp.c
  * source\hbpp\table.c
    * fixed some bugs, simplified expressions in SearnRep()

19990716-06:45 GMT+1 Ryszard Glab <rglab@imid.med.pl>

	*source/compiler/harbour.y
	 * corrected generation of proper static frame for functions
	   (the values of static variables defined in different modules
	   are no longer overlapped)

	*tests/broken/statics1.prg
	*tests/broken/statics2.prg
	 -moved to tests/working directory

	*config/dos/watcom.cf
	 * corrected to support HB_*_COMPILE variables

	*config/global.cf
	*config/rules.cf
	 * removed duplicated definition of HB variable
	 * HB_*_COMPILE variables are defined now before architecture
	   and compiler specific config file is included (it allows to change
	   these variables for specific architecture/compiler requirements)

	*doc/codebloc.txt
	 + added description of an incompatibility with Clipper

19990715-23:40 CET Eddie Runia <eddie@runia.com>
   * tests/working/arrays.prg;
     tests/working/dosshell.prg;
     tests/working/dupvars.prg;
     tests/working/keywords.prg;
     tests/working/linecont.prg;
     tests/working/linecont.prg;
     tests/working/longstr2.prg;
     tests/working/spawn.prg;
     tests/working/spawn2.prg;
     tests/working/test10.prg;
     tests/working/testid.prg;
     tests/working/test_all.prg
     //NOTEST should be the first line

19990715-23:14 CET Patrick Mast <harbour@PatrickMast.com>
   All files for the Preprocessor lib from Felipe Coury <fcoury@flexsys-ci.com>
   + source/hbpp/preproc.c
   + doc/hbpplib.txt
   + tests/working/testpre.prg
   + Hbpplib.b32
   + Bldhbpp.bat
   * changed tests/working/bld32exe.bat (to include hbpp.lib)
